# transformer-attention

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  kv_cache.py  positional_encoding.py  pyproject.toml  test_all.py  transformer_block.py
.github/workflows/: test.yml
experiments/: README.md  __init__.py  compare_attention.py  compare_cache.py  compare_decoding.py  compare_training.py
experiments/runs/: README.md  compare.py
experiments/runs/002_small_model/: config.json  results.json
experiments/runs/003_low_lr/: config.json  results.json
experiments/runs/004_high_lr/: config.json  results.json
experiments/runs/legacy_001_baseline/: config.json  results.json
experiments/runs/legacy_002_small_model/: config.json
experiments/runs/legacy_003_low_lr/: config.json
experiments/runs/legacy_004_high_lr/: config.json
experiments/runs/legacy_005_early_stop/: config.json  results.json
modern_llm/: README.md
np_impl/: README.md
pytorch/: README.md  attention.py  cross_attention.py  kv_cache.py  multi_head_attention.py  positional_encoding.py  test_all.py  transformer_block.py  utils.py
