[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "attention-from-scratch"
version = "0.1.0"
description = "纯 NumPy 实现 Transformer Attention 机制 — 从零手写"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "numpy",
]
